--- a/general.html
+++ b/general.html
@@ -214,8 +214,8 @@
 <body>
   <!-- Carrusel de fondo -->
   <div class="background-carousel">
-    <img src="./images/_ROS8248.jpg" alt="Fondo 1" class="active"> <!-- Cambia esta ruta -->
-    <img src="./images/_ROS8114.jpg" alt="Fondo 2"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8248.jpg" alt="Fondo 1" class="active"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8114.jpg" alt="Fondo 2"> <!-- Cambia esta ruta -->
     <img src="./images/_ROS8097.jpg" alt="Fondo 3"> <!-- Cambia esta ruta -->
     <img src="./images/_ROS8029.jpg" alt="Fondo 4"> <!-- Cambia esta ruta -->
     <img src="./images/_ROS8014.jpg" alt="Fondo 5"> <!-- Cambia esta ruta -->
