--- a/general.html
+++ b/general.html
@@ -216,8 +216,8 @@
   <div class="background-carousel">
     <img src="./_ROS8248.jpg" alt="Fondo 1" class="active"> <!-- Cambia esta ruta -->
     <img src="./_ROS8114.jpg" alt="Fondo 2"> <!-- Cambia esta ruta -->
-    <img src="./images/_ROS8097.jpg" alt="Fondo 3"> <!-- Cambia esta ruta -->
-    <img src="./images/_ROS8029.jpg" alt="Fondo 4"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8097.jpg" alt="Fondo 3"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8029.jpg" alt="Fondo 4"> <!-- Cambia esta ruta -->
     <img src="./images/_ROS8014.jpg" alt="Fondo 5"> <!-- Cambia esta ruta -->
     <img src="./images/_ROS7960.jpg" alt="Fondo 6"> <!-- Cambia esta ruta -->
     <img src="./images/_ROS7998.jpg" alt="Fondo 7"> <!-- Cambia esta ruta -->
