--- a/index.html
+++ b/index.html
@@ -224,8 +224,13 @@
 <body>
   <!-- Carrusel de fondo -->
   <div class="background-carousel">
-    <img src="./_nombreImagen.jpg" alt="Fondo 1" class="active"> <!-- Cambia esta ruta -->
-    <img src="./images/_ROS8114.jpg" alt="Fondo 2"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8248.jpg" alt="Fondo 1" class="active"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8114.jpg" alt="Fondo 2"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8097.jpg" alt="Fondo 3"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8029.jpg" alt="Fondo 4"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8014.jpg" alt="Fondo 5"> <!-- Cambia esta ruta -->
+    <img src="./_ROS7998.jpg" alt="Fondo 6"> <!-- Cambia esta ruta -->
+    <img src="./_ROS7960.jpg" alt="Fondo 7"> <!-- Cambia esta ruta -->
   </div>
 
 <img src="https://drive.google.com/uc?export=view&id=1A2B3C4D5E6F7G8H9I0J" alt="Imagen desde Google Drive">
