--- a/index.html
+++ b/index.html
@@ -224,13 +224,17 @@
 <body>
   <!-- Carrusel de fondo -->
   <div class="background-carousel">
-    <img src="./_ROS8248.jpg" alt="Fondo 1" class="active"> <!-- Cambia esta ruta -->
-    <img src="./_ROS8114.jpg" alt="Fondo 2"> <!-- Cambia esta ruta -->
-    <img src="./_ROS8097.jpg" alt="Fondo 3"> <!-- Cambia esta ruta -->
-    <img src="./_ROS8029.jpg" alt="Fondo 4"> <!-- Cambia esta ruta -->
-    <img src="./_ROS8014.jpg" alt="Fondo 5"> <!-- Cambia esta ruta -->
-    <img src="./_ROS7998.jpg" alt="Fondo 6"> <!-- Cambia esta ruta -->
-    <img src="./_ROS7960.jpg" alt="Fondo 7"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8114.jpg" alt="Fondo 1" class="active"> <!-- Cambia esta ruta -->
+    <img src="./_ROS7810.jpg" alt="Fondo 2"> <!-- Cambia esta ruta -->
+    <img src="./_ROS7548.jpg" alt="Fondo 3"> <!-- Cambia esta ruta -->
+    <img src="./_ROS8014.jpg" alt="Fondo 4"> <!-- Cambia esta ruta -->
+    <img src="./_ROS7837.jpg" alt="Fondo 5"> <!-- Cambia esta ruta -->
+    <img src="./_ROS7612.jpg" alt="Fondo 6"> <!-- Cambia esta ruta -->
+    <img src="./_ROS7790.jpg" alt="Fondo 7"> <!-- Cambia esta ruta -->
+    <img src="./_ROS7946.jpg" alt="Fondo 8"> <!-- Cambia esta ruta -->
+    <img src="./_ROS7727.jpg" alt="Fondo 9"> <!-- Cambia esta ruta -->
+    <img src="./_ROS7747.jpg" alt="Fondo 10"> <!-- Cambia esta ruta -->
+
   </div>
 
   <!-- Contenido principal -->
@@ -241,8 +245,16 @@
     <span style="font-family: 'Playfair Display', serif; color: rgba(0, 0, 0, 0.413); font-size: 14rem; position: absolute; top: 35%; left: 50%; transform: translate(-50%, -50%); z-index: 1;">
       XV
     </span>
-    <p style="font-family: 'Monotype Corsiva', cursive; color: #e4e4e4; font-size: 2.8rem; margin-top: 1rem; position: relative; z-index: 2;">
-      Mis 15 años marcan el inicio de una nueva etapa,<br> y quiero celebrarla con vos...
+    <p style="
+      display: inline-block;
+      background: rgba(255,255,255,0.7);
+      padding: 0.6em 1em;
+      border-radius: 1em;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.07);
+      color: #89674e; /* Aquí cambias el color de la letra */
+    ">
+      Mis 15 años marcan el inicio de una nueva etapa,<br>
+      y quiero celebrarla con vos...
     </p>
   </header>
 
@@ -277,7 +289,7 @@
         <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">Valor de la tarjeta</h2>
         <p style="font-size: 1.8rem; margin: 0.5rem 0;"><strong>Adultos:</strong> <span style="color: #FFD700;">$55.000</span></p>
         <p style="font-size: 1.8rem; margin: 0.5rem 0;"><strong>Menores de 12 años:</strong> <span style="color: #FFD700;">$20.000</span></p>
-        <p style="font-size: 1.2rem; margin-top: 1rem;"><em>Por favor, abonar antes del 06/07/2025</em></p>
+
       </div>
     </section>
 
@@ -286,7 +298,7 @@
       <div class="card">
         <i class="fas fa-envelope icon"></i> <!-- Ícono de mensaje -->
         <h2>Confirmar asistencia</h2>
-        <p>Puedes confirmar tu asistencia enviando un mensaje por WhatsApp a:</p>
+        <p>hasta 06/07/2025 y consultar medios de pago a:</p>
         <div>
           <a class="button" href="https://wa.me/5493425477821?text=Hola%20Diego,%20confirmo%20mi%20asistencia%20a%20los%2015%20años%20de%20Lara." target="_blank">
             Diego
